[tool.poetry]
name = "wikipedia-map"
version = "0.1.0"
description = "A generation of a wikipedia map"
authors = ["Germain Louis <germain.louis.80@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.0"
python-igraph = "^0.8.0"
lxml = "^4.5.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
