[tool.poetry]
name = "wikipedia-map"
version = "0.1.0"
description = "A generation of a wikipedia map"
authors = ["Germain Louis <germain.louis.80@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-igraph = "^0.8.0"
pycairo = "^1.19.1"
cairocffi = "^1.1.0"
numpy = "^1.18.3"
scipy = "^1.4.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
